Creates nash index at index time, not query time.