@@ -343,6 +343,9 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.example.QueryCLI</mainClass>
+                                    <manifestEntries>
+                                        <Add-Opens>java.base/java.lang=ALL-UNNAMED</Add-Opens>
+                                    </manifestEntries>
                                 </transformer>
                             </transformers>
                         </configuration>
